[package]
name = "tclac"
version = "0.1.0"
edition = "2021"
description = "CLI/TUI control for TCL Home smart air conditioners over the internet"
license = "GPL-3.0-only"
repository = "https://github.com/AnnanKhan/tclac"
readme = "README.md"
keywords = ["tcl", "air-conditioner", "smart-home", "tui", "iot"]
categories = ["command-line-utilities"]
rust-version = "1.94"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
base64 = "0.22"
rand = "0.8"
anyhow = "1"
chrono = "0.4"
toml = "0.8"
directories = "5"
ratatui = "0.29"
crossterm = "0.28"

# AWS IoT Data Plane (device shadow read/write) with SigV4 handled by the SDK
aws-sdk-iotdataplane = "1"
aws-credential-types = "1"
aws-smithy-types = "1"

[profile.release]
opt-level = 2
